Fixed Navbar Toggler Background and Added Reponsive Spacing to The Header

--- a/frontend/src/customBootstrap.scss
+++ b/frontend/src/customBootstrap.scss
@@ -30,4 +30,9 @@ $width: (
     auto: auto,
   ),
 );
+
+.navbar-toggler-icon {
+  background: transparent;
+}
+
 @import "~bootstrap/scss/bootstrap";
